clusters/prod/apps/freshprobe/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: freshprobe
  labels:
    app: freshprobe
