clusters/prod/apps/freshprobe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshprobe
  namespace: freshprobe
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels: { app: freshprobe }
  template:
    metadata:
      labels: { app: freshprobe }
    spec:
      imagePullSecrets:
        - name: docker-hub-creds
      containers:
        - name: freshprobe
          image: docker.io/sudhan03/freshprobe:v0.1.2
          imagePullPolicy: Always
          args:
            - serve
            - --mode
            - http
            - --addr
            - ":8080"
            - --policy-dir
            - /etc/freshprobe/policies
            - --stateless
          ports:
            - containerPort: 8080
          resources:
            requests: { cpu: 50m, memory: 64Mi }
            limits: { cpu: 200m, memory: 128Mi }
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          volumeMounts:
            - name: policies
              mountPath: /etc/freshprobe/policies
              readOnly: true
      volumes:
        - name: policies
          configMap:
            name: freshprobe-policies
