clusters/prod/apps/freshprobe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshprobe
  namespace: freshprobe
spec:
  selector: { app: freshprobe }
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
