clusters/prod/apps/freshprobe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshprobe
  namespace: freshprobe
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - freshprobe.sudharsana.dev
      secretName: freshprobe-tls
  rules:
    - host: freshprobe.sudharsana.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: freshprobe
                port:
                  number: 80
